tests/errors/syn_class_var3.java
public class syn_class_var3 {
public int name ;
}